orig/service.yml
kind: Service
apiVersion: v1
metadata:
  name: {serviceName} #configured
  labels:
    name: {serviceName}
    auto-ingress: "yes"
  annotations:
      external-dns.alpha.kubernetes.io/hostname: {myEnv}-{serviceName}.heed-dev.io.
spec:
  selector:
    name: {serviceName}-{serviceColor}
    color: {serviceColor}
    type : {serviceName}-{serviceColor}
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 80
      name: tcp-80
  type: LoadBalancer
